# small-usvg

./: CMakeLists.txt  LICENSE  README.md
cmake/: enableIdeSupport.cmake
demo/: CMakeLists.txt  main.cpp
demo/scenes/: crane.xml  crane_ribbons.xml  drape.xml  ladybug.xml  pepper.xml  portal.xml  sunset.xml
usvg/: CMakeLists.txt
usvg/cmake/: eigen3.cmake  openmp.cmake  tinyxml2.cmake
usvg/eigenAddons/: matrix_addons.hpp
usvg/include/usvg/: array.hpp  bernstein_basis.hpp  bezier_clipping.hpp  bezier_curve.hpp  bezier_discretizer.hpp  bezier_spline.hpp  bezier_surface.hpp  boundary_condition.hpp  bvh.hpp  diffusion_curve.hpp  edge_graph.hpp  ferguson_patch.hpp  gradient_mesh.hpp  image.hpp  implicit_line.hpp  iparameterizable_curve.hpp  iparametric_curve.hpp  jacobi_iteration.hpp  patch.hpp  piecewise_linear_curve.hpp  poisson_curve.hpp  regular_grid.hpp  scene.hpp  types.hpp
usvg/src/: bernstein_basis.cpp  bezier_clipping.cpp  bezier_discretizer.cpp  bvh.cpp  diffusion_curve.cpp  edge_graph.cpp  gradient_mesh.cpp  image.cpp  implicit_line.cpp  patch.cpp  poisson_curve.cpp  scene.cpp
